--- a/index.htm
+++ b/index.htm
@@ -86,6 +86,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    
+    <script src="js/home-page-tabs.js"></script>
 
 
   </body>
