--- a/signin.htm
+++ b/signin.htm
@@ -31,9 +31,10 @@
   
   <div id="wrap">
 
-    <div class="navbar navbar-inverse">
+    <div class="navbar navbar-static-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
+
           <a class="brand" href="index.htm">Weave</a>
           <div class="">
             <ul class="nav">
@@ -233,6 +234,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    
+    <script src="js/home-page-tabs.js"></script>
 
 
   </body>
