Updated UI to be in sync with staging app

--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="index.htm">Weave</a>
+          <a class="brand" href="index.htm">Thnku</a>
         </div>
       </div>
     </div>
