--- a/signin.htm
+++ b/signin.htm
@@ -42,7 +42,7 @@
       <div class="navbar-inner">
         <div class="container">
 
-          <a class="brand" href="index.htm">Weave</a>
+          <a class="brand" href="index.htm">Thnku</a>
           <div class="">
             <ul class="nav">
               <li class="searchbox"><a href="#" data-toggle="collapse" data-target="#searchbox" class="btn-small"><span class="hidden-phone">Search&nbsp;</span> <i class="icon-search icon-white"></i></a></li>
