--- a/privacy-policy.htm
+++ b/privacy-policy.htm
@@ -31,7 +31,7 @@
   
   <div id="wrap">
 
-    <div class="navbar navbar-inverse">
+    <div class="navbar navbar-static-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="index.htm">Thnku</a>
