State changes for blocked/unblocked link

--- a/front.htm
+++ b/front.htm
@@ -195,7 +195,7 @@
 									<li><a href="" class="btn-mini"><i class="icon-bookmark icon"></i>&nbsp;Permalink</a></li>
 									<li><a href="" class="btn-mini"><i class="icon-star-empty icon"></i>&nbsp;Pin&nbsp;this</a></li>
 									<li><a href="" class="btn-mini"><i class="icon-globe icon"></i>&nbsp;Public</a></li>
-									<li><a href="" class="btn-mini"><i class="icon-ban-circle icon"></i>&nbsp;Blocked</a></li>     
+									<li><a href="" class="btn-mini blocked"><i class="icon-ban-circle icon"></i>&nbsp;Blocked</a></li>     
       
 								</ul>
 							</div>
